<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_bird"
        android:layout_width="34dp"
        android:layout_height="36dp"
        android:contentDescription="@string/bird"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/bird" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="407dp"
        android:layout_height="272dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_create_session"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#5517C3"
        android:onClick="createSession"
        android:text="@string/create_session"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_find_session"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#5517C3"
        android:text="@string/find_session_main"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_create_session" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_settings"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#5517C3"
        android:text="@string/settings"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_find_session" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="181dp"
        android:layout_height="26dp"
        android:layout_marginTop="680dp"
        android:text="@string/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>










