<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServerSessionActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_connect_bluetooth"
        android:onClick="gotoConnectBluetooth"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#5517C3"
        android:text="@string/connect_bluetooth"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_token_css"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_token"
        app:layout_constraintBottom_toTopOf="@+id/et_token"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/et_token"
        android:layout_width="311dp"
        android:layout_height="54dp"
        android:layout_marginBottom="200dp"
        android:hint="@string/token"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_connect_bluetooth"
        app:layout_constraintVertical_bias="0.159" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_copy_token"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#5517C3"
        android:text="@string/copy_token"
        android:onClick="copyToken"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_token" />

       <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_close_session"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#5517C3"
        android:onClick="closeSession"
        android:text="@string/close_session"
        app:cornerRadius="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mb_copy_token" />


</androidx.constraintlayout.widget.ConstraintLayout>